feat(config): improve environment configuration and fallback values

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,16 +1,21 @@
 # Database Configuration
-MONGODB_URI=mongodb://localhost:27017/team-management-platform
-DATABASE_NAME=team-management-platform
+MONGODB_URI=mongodb://localhost:27017/team-management
 
 # JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_SECRET=your-super-secret-jwt-key-here
+JWT_REFRESH_SECRET=your-super-secret-refresh-key-here
 JWT_EXPIRES_IN=7d
-JWT_REFRESH_SECRET=your-super-secret-refresh-jwt-key-change-this-in-production
 JWT_REFRESH_EXPIRES_IN=30d
 
 # Server Configuration
 PORT=3000
 NODE_ENV=development
+FRONTEND_URL=http://localhost:5173
+
+# CORS Configuration (optional additional origins)
+ADMIN_URL=http://localhost:8081
+CORS_ORIGIN_1=http://localhost:8080
+CORS_ORIGIN_2=http://localhost:3000
 
 # AWS S3 Configuration
 AWS_ACCESS_KEY_ID=your-aws-access-key-id
@@ -22,13 +27,21 @@ AWS_S3_BUCKET_NAME=team-management-platform-files
 MAX_FILE_SIZE=10485760
 UPLOAD_PATH=./uploads
 
-# CORS Configuration
-FRONTEND_URL=http://localhost:5173
-
-# Rate Limiting
+# Rate Limiting Configuration
 THROTTLE_TTL=60
 THROTTLE_LIMIT=100
 
-# Admin Configuration
+# Admin User Configuration
 ADMIN_EMAIL=admin@teamplatform.com
 ADMIN_PASSWORD=Admin123!
+
+# Email Configuration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
+EMAIL_FROM=noreply@teammanagement.com
+
+# Default Email Configuration (fallbacks)
+DEFAULT_FROM_EMAIL=noreply@teammanagement.com
+DEFAULT_FRONTEND_URL=http://localhost:5173
